--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dog API GET Request</title>
+    <title>Dog API 1: GET Request</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
@@ -19,12 +19,12 @@
   </head>
   <body>
     <section id="container">
-      <h1 class="display-4 mb-4">Dog API: Simple GET Request</h1>
+      <h1 class="display-4 mb-4">Dog API 1: Simple GET Request</h1>
       <hr />
       <div id="input"></div>
       <form id="dog-num-form">
         <div class="form-group">
-          <h3>How many dog photos do you want between 3-50?</h3>
+          <h3>How many dog pics can we get you between 3-50?</h3>
           <input
             type="text"
             id="num-dog"
